LWT Release Notes
-----------------

* Release 1.0.0

- Added support for relative paths in the LuaPath and LuaCPath
configuration directives when these are used in a directory configuration.

- Added configuration directives for pre-request and post-request hooks and
a handler.

- Added configuration directives for limitting the maximum number
of arguments, the arguments size, the file upload size and the memory
allocated by Lua.

- Added the allocated Lua memory to the request statistics.

- Added httpd.time function to parse HTTP dates.

- Added httpd.cookie function to parse HTTP cookies.

- Added httpd.stat function to query request statistics.

- Added httpd.set_abort function to abort request processing after the current
file.

- Added environment table to request value.

- Added status to request value.

- Added useragent_ip to request value (new with Apache 2.4).

- Added support for defererd functions.

- Added support for Apache 2.4

- Improved diagnostic messages in case of Lua errors.

- Improved Lua 5.2 support.

- Corrected an issue where incorrectly using else and elseif elements in a
template would not be detected by the compiler.


* Release 0.9.1 (2012-01-06)

- Added Lua 5.2 compatibility. The regular Lua pairs function can now be used
to iterate APR tables.

- Data read from and written to memcached is now passed directly in the
cache buffer to and from the decoding and encoding functions, eliminating the
Lua string copy (and Lua buffer) overhead. Custom decoders unable to consume
the cache buffer directly must invoke tostring() as a result of this change.

- Corrected an issue where the httpd.add_cookie() function would not treat a
negative expires argument as documented.

- The cache module did not send a quit command to memecached before closing a
connection. This has been corrected.

- The mod_lwt Makefile did not explicitly link with librt. This has been
corrected.


* Release 0.9.0 (2011-08-19)

- Initial public release.